# exohood-exocoin

./: CMakeLists_IOS.txt  CMakelists.txt  Dockerfile  Makefile  README.md
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  FindUnbound.cmake  GenVersion.cmake  test-static-assert.c
contrib/: CMakeLists.txt
contrib/brew/: Brewfile
contrib/snap/: exocoinmd.conf  exohood-wrapper  exohood.conf
docs/: build-and-run.md  daemon-rpc-documentation.md  exchange-listing-guide.md  wallet-rpc-documentation.md
include/: INode.h  IWallet.h
snap/: snapcraft.yaml
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in  version.h
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  db_types.h
src/blockchain_db/lmdb/: db_lmdb.cpp
src/blockchain_utilities/: CMakeLists.txt  README.md  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h
src/blocks/: CMakeLists.txt
src/checkpoints/: checkpoints.cpp
src/common/: aligned.c
src/cryptonote_basic/: CMakeLists.txt  account.cpp  account.h  account_boost_serialization.h  blobdatatype.h  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  cryptonote_stat_info.h  difficulty.cpp  difficulty.h  hardfork.cpp  hardfork.h  miner.cpp  miner.h  subaddress_index.h  tx_extra.h
src/cryptonote_core/: CMakeLists.txt  blockchain.cpp  blockchain.h  blockchain_storage_boost_serialization.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  tx_pool.cpp  tx_sanity_check.h
src/cryptonote_protocol/: block_queue.cpp
src/cyrpto/: CMakeLists.txt
src/daemon/: CMakelists.txt
src/daemonizer/: CMakeLists.txt
src/debug_utilities/: CMakeLists.txt  cn_deserialize.cpp  object_sizes.cpp
src/device/: CMakeLists.txt
src/p2p/: CMakeLists.txt
translations/: exohood.ts  exohood_fr.ts  exohood_it.ts  exohood_ja.ts  monero.ts  monero_fr.ts  monero_it.ts  monero_sv.ts
utilis/: doxygen-publish.sh
utils/build_scripts/: android32.Dockerfile
utils/conf/: exohood.conf
utils/munin_plugings/: alt_blocks_count
utils/python-rpc/framework/: rpc.py  wallet.py
utils/system/: exohood.service
utils/translations/: build-translations.sh
